@@ -1,6 +1,9 @@
 2002-08-27 Christoph Cullmann <cullmann@kde.org>
   * extended the context signed char to a uint ;)
   * some folding fixes (hopefully)
+  * memleak fix
+  * undo stuff changed a bit, 0 means unlimited like before, show
+    that now in the dialog and add a comment to ktexteditor
 
 2002-08-26 Christoph Cullmann <cullmann@kde.org>
   * Fixes for folding, cleanup, move folding tree into the buffer,
